--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ div#profile-pic:after{
 div#info-content-wrapper{
 	float: left;
 	display: inline-block;
-	width: 670px;
+	width : 670px;
 }
 div#left-info-col{
 	float: left;
@@ -281,10 +281,59 @@ ul#skill-items > li > p {
 	width: 500px;	
 }
 
+/**************************************
+Contact me styling
+***************************************/
+form#contact-form{
+	display: inline-block;
+	width: 697px;
+}
+
+form#contact-form input[type="text"]{
+	width: 300px;
+	margin-right: 20px;
+	font-weight: bold;
+}	
+form#contact-form .input-content{
+	padding: 10px 10px;
+	border: 1px solid #1aa4fc;
+}
+form#contact-form textarea{
+	display: block;
+	margin: 10px 0px;
+	width: 645px;
+	height: 200px;
+	font-family: helvetica, sans-serif;
+}
+form#contact-form button{
+	margin: 0px 30px 10px 0px;
+	background-color: #1aa4fc;
+	border: none;
+	color: #fff;
+	height: 50px;
+	width: 100px;
+	font-size: 16px;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	cursor: pointer;
+	float: right;
+}
 /*FOOTER STYLING*/
 footer{
-	height: 50px;
+	color: #aaa;
 	width: 920px;
-	padding: 0px 20px;
+	padding: 20px;
 	margin: auto;
+}
+div#contact-pic{
+	display: inline-block;
+	position: absolute;
+	background-image: url('../images/contact-pic.png');
+	background-repeat: no-repeat;
+	width: 250px;
+	height: 260px;
+	background-size: 80%;
+	margin-top: 130px;
+	margin-left: -20px;
 }
